finale state from today